--- a/package.json
+++ b/package.json
@@ -189,6 +189,7 @@
     "react-native-search-bar": "^3.4.0",
     "react-native-signature-pad": "github:tradle/react-native-signature-pad",
     "react-native-splash-screen": "^3.0.9",
+    "react-native-step-indicator": "github:tradle/react-native-step-indicator",
     "react-native-swipeout": "^2.3.3",
     "react-native-switch-selector": "^1.0.7",
     "react-native-tcp": "^3.2.1",
