--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "postinstal": "npm run postinstall",
     "postintall": "npm run postinstall",
     "postintsal": "npm run postinstall",
+    "dedupe-deps": "DEBUG=dedupe-deps dedupe-deps --dir .",
     "nodeify": "./node_modules/.bin/rn-nodeify --hack --exclude net,tls",
     "installhooks": "cp hooks/* .git/hooks/",
     "rmsymlinks": "find -L . -type l -exec rm {} \\;",
@@ -262,6 +263,7 @@
     "babel-plugin-transform-inline-imports-commonjs": "^1.2.0",
     "babel-plugin-transform-object-rest-spread": "^6.3.13",
     "babel-plugin-transform-regenerator": "^6.3.13",
+    "dedupe-deps": "~1.0.0",
     "eslint": "^3.19.0",
     "eslint-config-standard": "^5.3.1",
     "eslint-plugin-promise": "^1.3.2",
