--- a/android/build.gradle
+++ b/android/build.gradle
@@ -44,6 +44,9 @@ allprojects {
         maven {
             url "http://maven.regulaforensics.com/RegulaDocumentReader"
         }
+        maven {
+            url 'http://maven.facetec.com'
+        }
         flatDir {
             dirs 'libs'
         }
