--- a/package.json
+++ b/package.json
@@ -191,7 +191,7 @@
     "react-native-search-bar": "^3.4.0",
     "react-native-signature-pad": "github:tradle/react-native-signature-pad",
     "react-native-splash-screen": "^3.0.9",
-    "react-native-step-indicator": "git://github.com/tradle/react-native-step-indicator.git#8b0edf9521cd71d5d4343919b6830f40f3757c39",
+    "react-native-step-indicator": "github:tradle/react-native-step-indicator",
     "react-native-swipeout": "^2.3.3",
     "react-native-switch-selector": "^1.0.7",
     "react-native-tcp": "^3.2.1",
