--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -267,33 +267,33 @@ configurations.all {
 }
 
 dependencies {
-    compile project(':rn-fetch-blob')
-    compile project(':react-native-vector-icons')
-    compile project(':react-native-udp')
-    compile project(':react-native-tradle-keeper')
-    compile project(':react-native-tcp')
-    compile project(':react-native-splash-screen')
-    compile project(':react-native-regula-document-reader')
-    compile project(':react-native-randombytes')
-    compile project(':react-native-push-notification')
-    compile project(':react-native-os')
-    compile project(':react-native-orientation')
-    compile project(':react-native-localization')
-    compile project(':react-native-local-auth')
-    compile project(':react-native-linear-gradient')
-    compile project(':react-native-keychain')
-    compile project(':react-native-image-store')
-    compile project(':react-native-image-picker')
-    compile project(':react-native-facetec-zoom')
-    compile project(':react-native-fabric')
-    compile project(':react-native-exception-handler')
-    compile project(':react-native-ecc')
-    compile project(':react-native-device-info')
-    compile project(':react-native-code-push')
-    compile project(':react-native-camera')
-    compile project(':react-native-branch')
-    compile project(':react-native-awesome-card-io')
-    compile project(':react-native-async-storage-snappy')
+    implementation project(':rn-fetch-blob')
+    implementation project(':react-native-vector-icons')
+    implementation project(':react-native-udp')
+    implementation project(':react-native-tradle-keeper')
+    implementation project(':react-native-tcp')
+    implementation project(':react-native-splash-screen')
+    implementation project(':react-native-regula-document-reader')
+    implementation project(':react-native-randombytes')
+    implementation project(':react-native-push-notification')
+    implementation project(':react-native-os')
+    implementation project(':react-native-orientation')
+    implementation project(':react-native-localization')
+    implementation project(':react-native-local-auth')
+    implementation project(':react-native-linear-gradient')
+    implementation project(':react-native-keychain')
+    implementation project(':react-native-image-store')
+    implementation project(':react-native-image-picker')
+    implementation project(':react-native-facetec-zoom')
+    implementation project(':react-native-fabric')
+    implementation project(':react-native-exception-handler')
+    implementation project(':react-native-ecc')
+    implementation project(':react-native-device-info')
+    implementation project(':react-native-code-push')
+    implementation project(':react-native-camera')
+    implementation project(':react-native-branch')
+    implementation project(':react-native-awesome-card-io')
+    implementation project(':react-native-async-storage-snappy')
     implementation project(':react-native-facetec-zoom')
     implementation project(':react-native-image-store')
     implementation project(':react-native-tradle-keeper')
