--- a/iOS/Podfile
+++ b/iOS/Podfile
@@ -19,6 +19,8 @@ target 'Tradle' do
 
 #  pod 'rn-fetch-blob', :path => '../node_modules/rn-fetch-blob'
 
+  pod 'react-native-netinfo', :path => '../node_modules/@react-native-community/netinfo'
+
 end
 
 
