--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "nibble": "eslint-nibble Components/ Store/ utils/ index.common.js"
   },
   "dependencies": {
+    "@react-native-community/netinfo": "^2.0.0",
     "@tradle/aws-client": "^3.1.1",
     "@tradle/bitcoin-adapter": "github:tradle/bitcoin-adapter",
     "@tradle/bitcoinjs-lib": "^1.6.1",
@@ -137,9 +138,9 @@
     "punycode": "^1.3.2",
     "q": "^1.4.1",
     "querystring-es3": "^0.2.1",
-    "react": "^16.3.1",
+    "react": "^16.8.3",
     "react-mixin": "~1.2.2",
-    "react-native": "^0.55.4",
+    "react-native": "^0.59.3",
     "react-native-accordion": "github:tradle/react-native-accordion#dev",
     "react-native-actionsheet": "^2.4.2",
     "react-native-animatable": "^0.6.1",
@@ -229,7 +230,7 @@
     "zlib": "browserify-zlib",
     "crypto": "react-native-crypto",
     "dns": "dns.js",
-    "http": "react-native-http",
+    "http": "@tradle/react-native-http",
     "https": "https-browserify",
     "path": "path-browserify",
     "querystring": "querystring-es3",
@@ -254,13 +255,14 @@
     "art": false
   },
   "devDependencies": {
+    "@babel/core": "^7.3.4",
+    "@babel/runtime": "^7.3.4",
     "@google-cloud/translate": "^1.1.0",
     "aws-sdk": "^2.407.0",
     "babel-eslint": "7.1.1",
+    "babel-jest": "^24.4.0",
     "babel-plugin-inline-package-json": "^2.0.0",
     "babel-plugin-lodash": "^3.3.4",
-    "babel-plugin-transform-async-functions": "^6.3.13",
-    "babel-plugin-transform-async-to-module-method": "^6.24.1",
     "babel-plugin-transform-inline-imports-commonjs": "^1.2.0",
     "babel-plugin-transform-object-rest-spread": "^6.3.13",
     "babel-plugin-transform-regenerator": "^6.3.13",
@@ -273,10 +275,12 @@
     "eslint-plugin-standard": "^1.3.2",
     "fast-xml-parser": "^3.12.10",
     "husky": "^0.13.2",
+    "metro-react-native-babel-preset": "^0.53.0",
     "minimist": "^1.2.0",
     "mocha": "https://registry.npmjs.org/mocha/-/mocha-3.5.3.tgz",
     "my-local-ip": "^1.0.0",
     "node-haste": "github:mvayngrib/node-haste#766d7e6",
+    "react-test-renderer": "16.8.3",
     "rn-nodeify": "github:tradle/rn-nodeify#mangle",
     "s3-ls": "^2.0.1",
     "source-map": "^0.5.3",
@@ -288,7 +292,7 @@
     "zlib": "browserify-zlib",
     "crypto": "react-native-crypto",
     "dns": "dns.js",
-    "http": "react-native-http",
+    "http": "@tradle/react-native-http",
     "https": "https-browserify",
     "path": "path-browserify",
     "querystring": "querystring-es3",
