--- a/package.json
+++ b/package.json
@@ -82,7 +82,7 @@
     "any-promise": "1.3.0",
     "art": "^0.10.0",
     "assert": "^1.3.0",
-    "asyncstorage-down": "^4.2.0",
+    "asyncstorage-down": "https://registry.npmjs.org/asyncstorage-down/-/asyncstorage-down-4.2.0.tgz",
     "aws-iot-device-sdk": "github:mvayngrib/aws-iot-device-sdk-js",
     "backoff": "^2.4.1",
     "bluebird": "2.11.0",
@@ -151,14 +151,14 @@
     "react-native-branch": "^2.2.4",
     "react-native-button": "^2.3.0",
     "react-native-camera": "github:react-native-community/react-native-camera#fd87a34",
-    "react-native-carousel": "^0.11.0",
+    "react-native-carousel": "github:tradle/react-native-carousel",
     "react-native-code-push": "^5.4.0",
     "react-native-collapsible": "^0.10.0",
     "react-native-crypto": "^2.1.0",
     "react-native-datepicker": "github:pgmemk/react-native-datepicker#dev",
     "react-native-deprecated-custom-components": "github:tradle/react-native-custom-components",
     "react-native-device-info": "^0.21.2",
-    "react-native-ecc": "^2.1.0",
+    "react-native-ecc": "^2.2.0",
     "react-native-exception-handler": "2.2.0",
     "react-native-fabric": "^0.4.1",
     "react-native-fabric-crashlytics": "0.1.8",
@@ -171,7 +171,7 @@
     "react-native-image-picker": "github:tradle/react-native-image-picker#imagestore",
     "react-native-image-store": "github:tradle/react-native-image-store",
     "react-native-infinite-scroll-view": "github:tradle/react-native-infinite-scroll-view",
-    "react-native-keychain": "github:mvayngrib/react-native-keychain#rn40",
+    "react-native-keychain": "github:mvayngrib/react-native-keychain",
     "react-native-lazyload": "github:mvayngrib/react-native-lazyload",
     "react-native-level": "^3.1.0",
     "react-native-level-fs": "^3.0.0",
