--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -278,6 +278,7 @@ configurations.all {
 dependencies {
     implementation project(':@react-native-community_viewpager')
     implementation project(':@react-native-community_netinfo')
+    implementation 'com.facetec:zoom-authentication-hybrid:7.0.11'
     implementation project(':react-native-facetec-zoom')
     implementation project(':react-native-image-store')
     implementation project(':react-native-tradle-keeper')
