--- a/android/build.gradle
+++ b/android/build.gradle
@@ -72,6 +72,7 @@ ext {
     supportLibVersion           = "28.0.0"
     googlePlayServicesVersion   = "11.8.0"
     minSdkVersion               = 19
+    zoomSdkVersion              = '7.0.11'
 }
 
 task wrapper(type: Wrapper) {
