--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -299,6 +299,7 @@ dependencies {
     implementation project(':react-native-linear-gradient')
     implementation project(':react-native-keychain')
     implementation project(':react-native-image-picker')
+    implementation project(':react-native-document-picker')
     implementation(project(':react-native-device-info')) {
         exclude group: 'com.google.android.gms'
     }
