--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -55,6 +55,9 @@ include ':react-native-async-storage-snappy'
 project(':react-native-async-storage-snappy').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-async-storage-snappy/android')
 include ':react-native-facetec-zoom'
 project(':react-native-facetec-zoom').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-facetec-zoom/android')
+include ':react-native-document-picker'
+project(':react-native-document-picker').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-document-picker/android')
+
 rootProject.name = 'Tradle'
 // include ':blinkid-react-native'
 // project(':blinkid-react-native').projectDir = new File(rootProject.projectDir, '../node_modules/blinkid-react-native/src/android')
