--- a/package.json
+++ b/package.json
@@ -188,6 +188,7 @@
     "typeforce": "^1.5.5",
     "url": "^0.10.3",
     "util": "^0.10.3",
+    "victory": "^33.1.6",
     "vm-browserify": "0.0.4",
     "whatwg-fetch": "^1.0.0",
     "xtend": "~4.0.0",
