--- a/package.json
+++ b/package.json
@@ -74,7 +74,7 @@
     "@tradle/multiqueue": "^2.3.1",
     "@tradle/promise-utils": "^1.1.0",
     "@tradle/protocol": "^5.0.1",
-    "@tradle/qr-schema": "github:tradle/qr-schema",
+    "@tradle/qr-schema": "^2.0.3",
     "@tradle/restore": "github:tradle/restore",
     "@tradle/validate-model": "^7.1.22",
     "@tradle/validate-resource": "^4.3.4",
