--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -259,6 +259,8 @@ configurations.all {
 }
 
 dependencies {
+    implementation project(':react-native-exit-app')
+    implementation project(':jail-monkey')
     def multidex_version = "2.0.1"
     implementation "androidx.multidex:multidex:$multidex_version"
 
