--- a/package.json
+++ b/package.json
@@ -112,6 +112,7 @@
     "graphql-request": "^1.8.2",
     "https-browserify": "0.0.1",
     "inherits": "^2.0.1",
+    "jail-monkey": "^2.3.2",
     "jsc-android": "^236355.1.1",
     "json-stringify-safe": "^5.0.1",
     "level-change-processor": "github:mvayngrib/level-change-processor#7100404",
@@ -161,6 +162,7 @@
     "react-native-document-picker": "^2.3.0",
     "react-native-ecc": "^2.2.0",
     "react-native-exception-handler": "2.2.0",
+    "react-native-exit-app": "^1.1.0",
     "react-native-facetec-zoom": "github:tradle/react-native-facetec-zoom#mv/sdk8.x",
     "react-native-flexbox-grid": "github:tradle/react-native-flexbox-grid",
     "react-native-floating-labels": "github:mvayngrib/react-native-floating-labels#dev",
